<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="AxDriveFB_V2" Id="{d5429b00-4e74-4f39-a704-878d34ba736b}" SpecialFunc="None">
    <Declaration><![CDATA[//notes
// For any continuos movements I think I need to move out of state machine architecture to allow multiple commands to be issued.

FUNCTION_BLOCK AxDriveFB_V2
VAR_INPUT
	
	absPos		:	LREAL;	
	bDatum		: 	BOOL;
	bEn			:	BOOL;
	bEnFw		:	BOOL;
	bEnBw		:	BOOL;
	OVERRIDE	:	LREAL;
	COMMAND		:	McCommand;	//uint to select COMMAND
	POSITION	:	LREAL;
	VELOCITY	:	LREAL;
	
	
	//BUFFER MODES
	// 0 mcAborting 			Start FB immediately (default mode)
	// 1 mcBuffered				Start FB after current motion has finished
	// 2 mcBlendingLow			The VELOCITY is blended with the lowest VELOCITY of both FBs
	// 3 mcBlendingPrevious		The VELOCITY is blended with the VELOCITY of the first FB
	// 4 mcBlendingNext			The VELOCITY is blended with VELOCITY of the second FB
	// 5 mcBlendingHigh			The VELOCITY is blended with highest VELOCITY of both FBs
	
	distance: LREAL;
	
	//GEARING STUFF
	MASTER:	AXIS_REF;
	ratioNum	:	LREAL;
	ratioDen	:	UINT;
	
END_VAR
VAR_IN_OUT
	//These are variables you want to be able to control outside of the function
	//I am choosing to include execution flags as it allows you to control how they one shot and not rely on user end to drop them
	//low after calling a COMMAND.
	axis		: 	AXIS_REF;
	bExecute	:	BOOL;
	bReset		:	BOOL;

END_VAR
VAR_OUTPUT
	axisReady	:	BOOL;
	errorID		:	UDINT;
	bError		:	BOOL;
	bReady		:	BOOL:=FALSE;	//Reset and controller enabled
	
	bBusy		:	BOOL;			//Running COMMAND
	bMoving		:	BOOL;
	latchedDone	:	BOOL;
END_VAR
VAR
	uCommand	:	McCommand;
	bTest		: 	BOOL;
	heartBeat	:	UINT;
	executeTrig	:	R_TRIG;
	doneLatch	:	SR;
	bDone		:	BOOL;
	
//FBs as defined by PLC Open Standard
	//ADMIN
	MCReset					:	MC_Reset;											//1
	MCPower					:	MC_Power;											//2 - DOES NOT REQUIRE AN EXECUTE
	MCReadStatus			:	MC_ReadStatus;										//3
	MCReadAxisError			:	MC_ReadAxisError;									//4
	MCReadParameter			:	MC_ReadParameter;									//5
	MCReadBoolParameter		:	MC_ReadBoolParameter;								//6
	MCWriteParameter		:	MC_WriteParameter;									//7
	MCWriteBoolParameter	:	MC_WriteBoolParameter;								//8
	//MCReadDigitalInput		:	MC_ReadDigitalInput;	//NOT IMPLEMENTED		//9
	//MCReadDigitalOutput			:	MC_ReadDigitalOutput;	//NOT IMPLEMENTED	//10
	//MCWriteDigitalOutput			:	MC_WriteDigitalOutput;	//NOT IMPLEMENTED	//11
	MCReadActualPosition	:	MC_ReadActualPosition;								//12
	MCReadActualVelocity	:	MC_ReadActualVelocity;								//13
	//MCReadActualTorque		:	MC_ReadActualTorque;		//NOT IMPLEMENTED	//14
	//MCReadAxisInfo			:	MC_ReadAxisInfo;			//NOT IMPLEMENTED	//15
	//MCReadMotionState		:	MC_ReadMotionState;				//NOT IMPLEMENTED	//16
	MCSetPosition			:	MC_SetPosition;										//17
	MCSetOverride			:	MC_SetOverride;										//18
	MCTouchProbe			:	MC_TouchProbe;										//19
	//MCDigitalCamSwitch		:	MC_DigitalCamSwitch;		//NOT IMPLEMENTED	//20
	MCAbortTrigger			:	MC_AbortTrigger;									//21
	MCAbortSuperposition		:	MC_AbortSuperposition;		//HaltSuperimposed?	//22
	MCCamTableSelect		:	MC_CamTableSelect;									//23
	
	//MOTION
	MCHome					:	MC_Home;											//24
	MCJog					:	MC_Jog;												//25
	MCStop					:	MC_Stop;											//26
	MCHalt					:	MC_Halt;											//27
	MCMoveAbsolute			:	MC_MoveAbsolute;									//28
	MCMoveRelative			:	MC_MoveRelative;									//29
	MCMoveAdditive			:	MC_MoveAdditive;									//30
	MCMoveSuperimposed		:	MC_MoveSuperimposed;								//31
	MCMoveVelocity			:	MC_MoveVelocity;									//32*****
	MCMoveContinuousAbsolute	:	MC_MoveContinuousAbsolute;						//33
	MCMoveContinuousRelative	:	MC_MoveContinuousRelative;						//34
	MCMoveModulo			:	MC_MoveModulo;										//35
	//MCTorqueControl			:	MC_TorqueControl;		//NOT IMPLEMENTED		//36
	//MCPositionProfile		:	MC_PositionProfile;			//NOT IMPLEMENTED		//37
	//MCVelocityProfile		:	MC_VelocityProfile;			//NOT IMPLEMENTED		//38
	//MCAccelerationProfile	:	MC_AccelerationProfile;		//NOT IMPLEMENTED		//39
	MCGearIn				:	MC_GearIn;											//40
	MCGearInDyn				:	MC_GearInDyn;										//41
	MCGearInMultiMaster		:	MC_GearInMultiMaster;								//42	
	MCGearOut				:	MC_GearOut;											//43
	
	MCHaltPhasing			:	MC_HaltPhasing;										//44
	MCPhasingAbsolute		:	MC_PhasingAbsolute;									//45
	MCPhasingRelative		:	MC_PhasingRelative;									//46
	
	//CAMMING
	MCCamIn					:	MC_CamIn;											//47
	MCCamOut				:	MC_CamOut;											//48
	MCCamScaling			:	MC_CamScaling;										//49
	//MULTICAMMING	
	MCCamAdd				:	MC_CamAdd;											//50
	MCCamExchange			:	MC_CamExchange;										//51
	MCCamInV2				:	MC_CamIn_V2;		//REQUIRED FOR MULTICAMMING 	//52	//do not use MC_CamIn
	MCCamRemove				:	MC_CamRemove;										//53
	MCCamScalingV2			:	MC_CamScaling_V2;									//54
	
	
				
			
	
	

	//MOTION
	
	//MCHomeRef	:	MC_StepReferencePulse;
	//MCHomeLim	:	MC_StepLimitSwitch;
	//MCHomeAbs	:	MC_StepAbsoluteSwitch;
	//homingSw	:	MC_Ref_Signal_Ref;
	//homingStruct:	MC_HomingParameter;
	

	
	axisState		:	UINT;
	iState			: 	UINT;
	
	Status: INT;	

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[axis.ReadStatus();
bTest:= uCommand=2;
heartBeat:= heartBeat+1;


//////////////////////////////////////
//				FLAGS				//
//////////////////////////////////////
axisReady:= axis.Status.Operational;
bMoving:=axis.Status.Moving;

//LATCH ON THE COMMAND SIGNAL - NOT SURE ABOUT THIS. NEED GUI TO TEST BETTER
IF NOT axis.Status.HasJob THEN	
	uCommand:=COMMAND;
END_IF


//////////////////////////////////////
//			AXIS STATES				//
//////////////////////////////////////
IF axis.Status.Disabled THEN
	axisState:=		100;
ELSIF axis.Status.StandStill THEN
	axisState:=		200;
ELSIF axis.Status.Homing	THEN
	axisState:= 	300;
ELSIF axis.Status.DiscreteMotion	THEN
	axisState:=		400;
ELSIF axis.Status.SynchronizedMotion	THEN
	axisState:=		500;
ELSIF axis.Status.ContinuousMotion	THEN
	axisState:=		600;
ELSIF axis.Status.Stopping	THEN
	axisState:= 	700;	
ELSIF axis.Status.Error THEN
	axisState:=		999;	
ELSE
	axisState:=		0;
END_IF

//Power run outside of commands as need to watch limits
MCPower(
	Axis:=axis,
	Enable:=bEn,
	Enable_Positive:=bEnFw,
	Enable_Negative:=bEnBw,
	Override:=OVERRIDE,
	Status=>,
	Busy=>,
	Active=>,
	Error=>,
	ErrorID=>
);

CASE uCommand OF
	1:		//RESET
	MCReset(
		Axis:=axis,
		Execute:=bReset, 
		Done=>	,
		Busy=>	,
		Error=>	,
		ErrorID=>	,
		);
		//Might put this in FB after testing
		IF bReset=TRUE THEN
			bDone:=MCReset.Done;
			bBusy:=MCReset.Busy;
			bError:=MCReset.Error;
			errorID:=MCReset.ErrorID;
			bExecute:= NOT(MCReset.Done);
			bReset:=FALSE;
		END_IF	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	2:		//POWER
		IF bEn THEN
			axisReady:=MCPower.Active;
			bBusy:=MCPower.Busy;
			bError:=MCPower.Error;
			errorID:=MCPower.ErrorID;
		END_IF		
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////	
	3:		//READ STATUS
	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	4:		//READ AXIS ERROR
	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	5:		//READ PARAMETER
	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	6:		//READ BOOL PARAMETER
	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	7:		//WRITE PARAMETER
	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	8:		//WRITE BOOL PARAMETER
	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	9:		//READ DIGITAL INPUT - NOT IMPLEMENTED IN BECKHOFF
	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	10:		//READ DIGITAL OUTPUT - NOT IMPLEMENTED IN BECKHOFF
	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	11:		//WRITE DIGITAL OUTPUT - NOT IMPLEMENTED IN BECKHOFF
	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	12:		//READ ACTUAL POSITION
	13:		//READ ACTUAL VELOCITY
	14:		//READ ACTUAL TORQUE - NOT IMPLEMENTED IN BECKHOFF
	15:		//READ AXIS INFO - NOT IMPLEMENTED IN BECKHOFF
	16:		//READ MOTION STATE - NOT IMPLEMENTED IN BECKHOFF
	17:		//SET POSITION
	18:		//SET OVERRIDE
	19:		//TOUCH PROBE
	20:		//DIGITAL CAM SWITCH - NOT IMPLEMENTED IN BECKHOFF
	21:		//ABORT TRIGGER
	22:		//ABORT SUPERPOSITION - HALT SUPERIMPOSED IN STANDARD
	23:		//CAM TABLE SELECT
	24:		//HOME
	25:		//JOG
	26:		//STOP
	27:		//HALT
	28:		//MOVE ABSOLUTE
		MCMoveAbsolute(	
			Axis:=axis,
			Execute:=bExecute,
			Position:=	POSITION,
			Velocity:= VELOCITY,
			Acceleration:= ,
			Deceleration:= ,
			Jerk:= ,
			BufferMode:=,
			Options:=,
			Done=>bDone,
			Busy=>bBusy,
			Active=>,
			CommandAborted=>,
			Error=>bError,
			ErrorID=>errorID
		);
		executeTrig(CLK:=MCMoveAbsolute.Done);//NOT(MCMoveAbsolute.Done);
		IF executeTrig.Q THEN
			bExecute:= FALSE;
		END_IF
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	29:		//MOVE RELATIVE
		MCMoveRelative(	
			Axis:=axis,
			Execute:=bExecute,
			Distance:= distance,
			Velocity:= VELOCITY,
			Acceleration:= ,
			Deceleration:= ,
			Jerk:= ,
			BufferMode:=,
			Options:=,
			Done=>bDone,
			Busy=>bBusy,
			Active=>,
			CommandAborted=>,
			Error=>bError,
			ErrorID=>errorID
		);
		executeTrig(CLK:=MCMoveRelative.Done);//NOT(MCMoveAbsolute.Done);
		IF executeTrig.Q THEN
			bExecute:= FALSE;
		END_IF
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	30:		//MOVE ADDITIVE
	31:		//MOVE SUPERIMPOSED
	32:		//MOVE VELOCITY
	33:		//MOVE CONTINUOUS ABSOLUTE
	34:		//MOVE CONTINUOUS RELATIVE
	35:		//MOVE MODULO
	36:		//TORQUE CONTROL - NOT IMPLEMENTED IN BECKHOFF
	37:		//POSITION PROFILE - NOT IMPLEMENTED IN BECKHOFF
	38:		//VELOCITY PROFILE - NOT IMPLEMENTED IN BECKHOFF
	39:		//ACCELERATION PROFILE - NOT IMPLEMENTED IN BECKHOFF
	40:		//GEAR IN
		MCGearIn(
			Master:=	MASTER,
			Slave:=		axis,
			Execute:=	bExecute,
			RatioNumerator:=	ratioNum,
			RatioDenominator:=	ratioDen,
			Acceleration:=		,
			Deceleration:=		,
			Jerk:=				,
			BufferMode:=		,
			Options:=			,
			InGear=>	,
			Busy=>		bBusy,
			Active=>	bDone,
			CommandAborted=>	,
			Error=>		bError,
			ErrorID=>	errorID
		);
		executeTrig(CLK:=MCGearIn.Active);
		IF executeTrig.Q THEN
			bExecute:= FALSE;
		END_IF
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
	41:		//GEAR IN DYNAMIC
	42:		//GEAR IN MULTI-MASTER
	43:		//GEAR OUT
		MCGearOut(
			Slave:=		axis,
			Execute:=	bExecute,
			Options:= ,
			Done=>		bDone,
			Busy=>		bBusy,
			Error=>		bError,
			ErrorID=>	errorID
		);
		executeTrig(CLK:=MCGearOut.Done);
		IF executeTrig.Q THEN
			bExecute:= FALSE;
		END_IF	
	///////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////	
	44:		//HALT PHASING
	45:		//PHASING ABSOLUTE
	46:		//PHASING RELATIVE
	47:		//CAM IN
	48:		//CAM OUT
	49:		//CAM SCALING
	50:		//CAM ADD
	51:		//CAM EXCHANGE
	52:		//CAM IN V2 - USE FOR MULTI CAMMING
	53:		//CAM REMOVE
	54:		//CAM SCALING V2
	
		
		
		
END_CASE



//Logic to latch on the done signal. As per the standard, unless the execute line is held high, there will be no done 
//output, so this latches that signal the one cycle it is on.
doneLatch(SET1:=bDone,RESET:=bBusy);
latchedDone:=doneLatch.Q1;

			

//bExecute:= FALSE; //Issue with this is you'll never receive a done signal unless execute is held high]]></ST>
    </Implementation>
    <LineIds Name="AxDriveFB_V2">
      <LineId Id="147" Count="0" />
      <LineId Id="379" Count="0" />
      <LineId Id="354" Count="0" />
      <LineId Id="980" Count="1" />
      <LineId Id="984" Count="0" />
      <LineId Id="982" Count="0" />
      <LineId Id="985" Count="0" />
      <LineId Id="383" Count="0" />
      <LineId Id="808" Count="0" />
      <LineId Id="976" Count="1" />
      <LineId Id="565" Count="0" />
      <LineId Id="975" Count="0" />
      <LineId Id="974" Count="0" />
      <LineId Id="978" Count="1" />
      <LineId Id="987" Count="1" />
      <LineId Id="986" Count="0" />
      <LineId Id="568" Count="0" />
      <LineId Id="574" Count="1" />
      <LineId Id="577" Count="1" />
      <LineId Id="581" Count="5" />
      <LineId Id="1128" Count="1" />
      <LineId Id="1126" Count="1" />
      <LineId Id="587" Count="1" />
      <LineId Id="569" Count="0" />
      <LineId Id="438" Count="0" />
      <LineId Id="666" Count="0" />
      <LineId Id="1376" Count="0" />
      <LineId Id="1365" Count="10" />
      <LineId Id="595" Count="0" />
      <LineId Id="1173" Count="0" />
      <LineId Id="591" Count="0" />
      <LineId Id="1456" Count="7" />
      <LineId Id="1472" Count="0" />
      <LineId Id="1464" Count="7" />
      <LineId Id="1345" Count="0" />
      <LineId Id="1273" Count="0" />
      <LineId Id="1338" Count="6" />
      <LineId Id="1274" Count="0" />
      <LineId Id="1347" Count="0" />
      <LineId Id="1346" Count="0" />
      <LineId Id="1275" Count="0" />
      <LineId Id="1348" Count="1" />
      <LineId Id="1276" Count="0" />
      <LineId Id="1350" Count="1" />
      <LineId Id="1277" Count="0" />
      <LineId Id="1352" Count="1" />
      <LineId Id="1278" Count="0" />
      <LineId Id="1354" Count="1" />
      <LineId Id="1279" Count="0" />
      <LineId Id="1356" Count="1" />
      <LineId Id="1280" Count="0" />
      <LineId Id="1358" Count="1" />
      <LineId Id="1281" Count="0" />
      <LineId Id="1360" Count="1" />
      <LineId Id="1282" Count="0" />
      <LineId Id="1362" Count="1" />
      <LineId Id="1283" Count="16" />
      <LineId Id="1377" Count="17" />
      <LineId Id="1400" Count="2" />
      <LineId Id="1404" Count="0" />
      <LineId Id="1300" Count="0" />
      <LineId Id="1405" Count="16" />
      <LineId Id="1427" Count="4" />
      <LineId Id="1301" Count="10" />
      <LineId Id="1433" Count="22" />
      <LineId Id="1312" Count="2" />
      <LineId Id="1473" Count="13" />
      <LineId Id="1315" Count="10" />
      <LineId Id="593" Count="0" />
      <LineId Id="618" Count="0" />
      <LineId Id="615" Count="0" />
      <LineId Id="594" Count="0" />
      <LineId Id="592" Count="0" />
      <LineId Id="385" Count="0" />
      <LineId Id="800" Count="3" />
      <LineId Id="398" Count="0" />
      <LineId Id="668" Count="0" />
      <LineId Id="404" Count="1" />
      <LineId Id="390" Count="0" />
      <LineId Id="355" Count="0" />
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>